src/objects/ConfiguracionPrevalidador__c.object
<CustomObject>
    <fields>
        <fullName>Cantidad_Consultas_Permitidas__c</fullName>
        <label>Cantidad Consultas Permitidas</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clave_WS_Prevalidador__c</fullName>
        <label>Clave WS Prevalidador</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_WS_Prevalidador__c</fullName>
        <label>URL WS Prevalidador</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Usuario_WS_Prevalidador__c</fullName>
        <label>Usuario WS Prevalidador</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>